# fusion-backcasting

./: .gitignore  README.md  arpa-e-fusion-cost-code-reference.md  pyproject.toml
backend/: __init__.py  main.py
backend/data/: default_subsystems.json
backend/models/: __init__.py  fuel_type.py  subsystem.py
backend/routes/: __init__.py  lcoe.py  solver.py
backend/services/: __init__.py  constraint_solver.py  feasibility.py  lcoe_calculator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/.claude/: settings.local.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CapitalBreakdownChart.tsx  ConfinementTypeSelector.tsx  FeasibilityIndicator.tsx  FinancialPanel.tsx  FuelTypeSelector.tsx  LCOEDisplay.tsx  SolveForButtons.tsx  SubsystemCard.tsx  SubsystemPanel.tsx
frontend/src/hooks/: useDarkMode.ts
frontend/src/store/: index.ts
frontend/src/utils/: calculations.ts
tests/: test_constraint_solver.py  test_fuel_constraints.py  test_lcoe_calculator.py
